spring-boot-api-03-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-api-03-app
  namespace: default
  labels:
    app: spring-boot-api-03-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-api-03-app
  template:
    metadata:
      labels:
        app: spring-boot-api-03-app
    spec:
      containers:
      - name: spring-boot-api-03-app
        image: localhost:5000/spring-boot-api-03-app:1.0
        ports:
        - containerPort: 8080
