spring-boot-api-03-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-api-03-app
  namespace: default
  labels:
    app: spring-boot-api-03-app
spec:
  selector:
    app: spring-boot-api-03-app
  ports:
    - protocol: TCP
      port: 8080
      #nodePort: 30074
  type: NodePort
