spring-boot-api-03-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-api-03-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: spring-boot-api-03.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-api-03-app
                port:
                  number: 8080
